# RetroED

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  manual.yml
RetroEDv2/: .clang-format  RetroEDv2.pro  aboutwindow.cpp  aboutwindow.hpp  aboutwindow.ui  gamemanager.cpp  gamemanager.hpp  gamemanager.ui  includes.cpp  includes.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  resources.qrc  splashscreen.cpp  splashscreen.hpp  version.hpp  versiongen.py
RetroEDv2/dependencies/: .gitignore  README.md  dependencies.txt
RetroEDv2/dependencies/imageviewer/src/: CMakeLists.txt  image-viewer-global.h  image-viewer.cpp  image-viewer.h  image-viewer.hpp  image-viewer.qrc
RetroEDv2/icons/: mac.icns
RetroEDv2/resources/: RSDKFileList.txt  RSDKv4FileList.txt  RSDKv5FileList.txt  RSDKv5UFileList.txt  RSDKv5VarNames.txt  variableList.txt
RetroEDv2/shaders/: primitive.glf  primitive.glv  sprite.glf  sprite.glv
RetroEDv2/tools/: animationeditor.cpp  animationeditor.hpp  animationeditor.ui  animationeditor.ui.autosave  exportrsdkv5scene.cpp  exportrsdkv5scene.hpp  exportrsdkv5scene.ui  gameconfigeditorv1.cpp  gameconfigeditorv1.hpp  gameconfigeditorv1.ui  gameconfigeditorv2.cpp  gameconfigeditorv2.hpp  gameconfigeditorv2.ui  gameconfigeditorv3.cpp  gameconfigeditorv3.hpp  gameconfigeditorv3.ui  gameconfigeditorv4.cpp  gameconfigeditorv4.hpp  gameconfigeditorv4.ui  gameconfigeditorv5.cpp  gameconfigeditorv5.hpp  gameconfigeditorv5.ui  gfxtool.cpp  gfxtool.hpp  gfxtool.ui  rsvtool.cpp  (+42 more)
(+505 files in other folders)
